--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
+  },
+  "overrides": {
+    "rimraf": "^6.0.0",
+    "glob": "^11.0.0",
+    "minimatch": "^10.2.1"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.985.0",
@@ -17,7 +22,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "form-data": "^4.0.5",
-    "googleapis": "^170.1.0",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^171.4.0",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
